# dkp-activity-system

./: .gitignore  README.md  docker-compose.development.yml  docker-compose.env.template  docker-compose.local.yml  docker-compose.server.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/disabled/: build-publish-development.yml  documantation.yml
.github/workflows/: linters.yml  release-build.yml  release-publish.yml
compose/: Dockerfile
oldcode/: filters.py
oldcode/cogs/: general.py
oldcode/cogs/event/: cog.py
oldcode/origin/: cog.py
resources/: docker-compose-ext-db.yml.template  docker-compose-with-web.yml.template  docker-compose.yml.template  env.template
scripts/: run_build_docker.sh  run_build_docs.sh  run_bumpversion.sh  run_docker.sh  run_linters.sh
snippets/: base.py  enum_choices.py  migration_start_sequence.py  reaction_once.py  simple-report.sql
snippets/activity-prototype-clan/: admin.py  choices.py  models.py  resources.py
snippets/activity-prototype-clan/migrations/: 0001_initial.py  0002_alter_event_options_alter_eventattendance_options_and_more.py
snippets/origin/: event.py  event2.py
src/: debug.py  manage.py
src/activity/: admin.py  choices.py  managers.py  models.py  resources.py  services.py
src/activity/cogs/: administration.py  base.py  general.py  moderation.py
src/activity/cogs/event/: __init__.py  checks.py  cog.py  enums.py
src/activity/cogs/utils/: transformers.py
src/activity/migrations/: 0001_initial.py  0002_alter_event_options_alter_eventattendance_options_and_more.py  0002_alter_event_status.py  0003_alter_event_unit_alter_eventtemplate_unit.py
src/discord_bot/: apps.py  bots.py  exceptions.py
src/discord_bot/management/commands/: debug_evebot.py  run_evebot.py
src/discord_bot/utils/: checks.py
src/evebot/: bot.py  client.py  context.py  exceptions.py
src/evebot/cogs/: __init__.py  admin.py  common.py  event.py  general.py
src/evebot/management/commands/: runbot.py
src/evebot/utils/: cache.py  checks.py  converters.py  enums.py  formats.py  functional.py  fuzzy.py  storage.py  strings.py  time.py
src/fixtures/: activity.json  auth.json  game_activity.json
src/fixtures/old/: activity.json  activity_full.json
src/game_activity/: admin.py  apps.py  models.py
src/game_activity/cogs/: game_event.py
src/game_activity/migrations/: 0001_initial.py
src/system/: asgi.py  env.py  storages.py  urls.py  wsgi.py
src/system/settings/: __init__.py  cache.py  database.py  discord_evebot.py  django.py  email.py  evebot.py
